# pmm

./: .gitignore  changelog.md  pmm  pmm.py  pyproject.toml  readme.md  reference.fish  update.fish
src/pmm/: __init__.py  cli.py  core.py  models.py  render.py  renderer.py
src/pmm/managers/: apt.py  base.py
src/pmm/utils/: colors.py  headers.py  process.py  sudo.py
