[project]
name = 'pmm'
dynamic = ['version', 'description']
requires-python = '>=3.10'
authors = [{ name = 'nyxion' }]
maintainers = [{ name = 'nyxion' }]
readme = 'readme.md'
keywords = ['package', 'manager', 'update', 'upgrade', 'apt']
classifiers = [
    'Development Status :: 4 - Beta',
    'Programming Language :: Python',
]

[project.urls]
Homepage = 'https://github.com/nyxion-luna/pmm'
Repository = 'https://github.com/nyxion-luna/pmm'
'Bug Tracker' = 'https://github.com/nyxion-luna/pmm/issues'
Changelog = 'https://github.com/nyxion-luna/pmm/blob/main/changelog.md'

[project.scripts]
pmm = 'pmm.cli:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/pmm/__init__.py"
